--- a/style.css
+++ b/style.css
@@ -75,7 +75,7 @@ p {
         background-color: #2710d5;
         border-radius: 0 0 478px 0;
         z-index: 11;
-        color: #ffffff;
+        color: yellow;
     }
     #main-message > h1 {
         font-size: 60px;
